<resources>
    <string name="app_name">NuevoIntento</string>
    <string name="white">Blanco</string>
    <string name="black">Negro</string>
    <string name="yellow">Amarillo</string>
    <string name="red">Rojo</string>
    <string name="orange">Naranja</string>
    <string name="green">Verde</string>
    <string name="cian">Cian</string>
    <string name="blue">Azul</string>
    <string name="violet">Violeta</string>
    <string name="grey">Gris</string>
</resources>