<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="#FF02DD"
    android:padding="10dp">

    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Elige el color"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <LinearLayout
        android:id="@+id/bloque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topText">

        <RadioGroup
            android:id="@+id/rgColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <RadioButton
                android:id="@+id/btnBlanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/white"
                android:textColor="@color/white"
                app:buttonTint="@color/white" />

            <RadioButton
                android:id="@+id/btnRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textColor="@color/white"
                app:buttonTint="@color/red" />

            <RadioButton

                android:id="@+id/btnNaranja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"
                android:textColor="@color/white"
                app:buttonTint="@color/orange" />

            <RadioButton
                android:id="@+id/btnAmarillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:textColor="@color/white"
                app:buttonTint="@color/yellow" />

            <RadioButton
                android:id="@+id/btnVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:textColor="@color/white"
                app:buttonTint="@color/green" />

            <RadioButton
                android:id="@+id/btnCian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cian"
                android:textColor="@color/white"
                app:buttonTint="@color/cian" />

            <RadioButton
                android:id="@+id/btnAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textColor="@color/white"
                app:buttonTint="@color/blue" />

            <RadioButton
                android:id="@+id/btnVioleta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/violet"
                android:textColor="@color/white"
                app:buttonTint="@color/violet" />

            <RadioButton
                android:id="@+id/btnGris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grey"
                android:textColor="@color/white"
                app:buttonTint="@color/grey" />

            <RadioButton
                android:id="@+id/btnNegro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"
                android:textColor="@color/white"
                app:buttonTint="@color/black" />

        </RadioGroup>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bttnChangeColorDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#4B0067"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bloque">

        <TextView
            android:id="@+id/aplicarColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="Aplicar color"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"></TextView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>