<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
   android:paddingTop="70dp"
    android:paddingLeft="60dp"
    android:background="#9C27B0"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/blanco"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/white"
        android:background="@color/white"
        android:gravity="center"
        android:textColor="@color/black"
        style="Theme.NuevoIntento"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rojo"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@color/red"
            android:text="@string/red"
            android:gravity="center"
            android:textColor="@color/white"
            style="Theme.NuevoIntento"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/naranja"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/orange"
                    android:text="@string/orange"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/amarillo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/yellow"
                    android:text="@string/yellow"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/verde"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:background="@color/green"
                    android:text="@string/green"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cian"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@color/cian"
                android:text="@string/cian"
                android:gravity="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/azul"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@color/blue"
                    android:text="@string/blue"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/violeta"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@color/violet"
                    android:text="@string/violet"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/gris"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@color/grey"
                android:text="@string/grey"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/negro"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/black"
                android:text="@string/black"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>